--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.21.2",
     "wav": "^1.0.2",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
